2008-11-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-patternsel-dialog.cc:
	* src/gnome-cmd-search-dialog.cc:
	Do not allocate dynamically SearchConfig in GnomeCmdData

2008-11-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	Do not enable column searching for regex view

2008-11-23  Alan Pae  <alanpae@ilkda.com>

	* po/Makefile.in.in:
	* po/POTFILES.in:
	* po/POTFILES.skip:
	Add missing files to the relevant POTFILES file

2008-11-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	Do not allocate dynamically AdvrenameConfig in GnomeCmdData

	* src/gnome-cmd-advrename-dialog.cc:
	* src/history.h:
	Add History::front() and History::reverse() functions

2008-11-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	Fix for "gtk_tree_view_column_cell_layout_add_attribute: assertion `info != NULL' failed" assertion

2008-11-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/dialogs/gnome-cmd-advrename-regex-dialog.cc
	advrename: viewing files with intviewer

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-dialog.h:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	Rename GnomeCmdData::AdvrenameDefaults -> GnomeCmdData::AdvrenameConfig

2008-11-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.h:
	* src/gnome-cmd-advrename-lexer.ll:
	advrename lexer: fix for bug when resetting counters

	* src/gnome-cmd-advrename-dialog.cc
	* src/gnome-cmd-advrename-dialog.h
	* src/gnome-cmd-data.cc
	* src/gnome-cmd-data.h
	* src/gnome-cmd-main-win.cc
	* src/gnome-cmd-main-win.h
	* src/gnome-cmd-user-actions.cc
	* src/dialogs/gnome-cmd-advrename-regex-dialog.cc
	* src/dialogs/gnome-cmd-advrename-regex-dialog.h
	Brand new dlg for Advanced Rename Tool

2008-11-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-con-dialog.cc:
	* src/dialogs/gnome-cmd-advrename-regex-dialog.cc: