@@ -31,11 +31,6 @@ gchar   *gviewer_get_string (const gchar *path, const gchar *def);
 gint     gviewer_get_int (const gchar *path, int def);
 gboolean gviewer_get_bool (const gchar *path, gboolean def);
 
-void     gviewer_write_string_history (gchar *format, GList *strings);
-GList   *gviewer_load_string_history (gchar *format, gint size);
-void     gviewer_free_string_history (GList *strings);
-gboolean gviewer_find_string_history(GList *strings, const gchar *text);
-
 int unicode2utf8(unsigned int unicode, unsigned char *out);
 char_type *convert_utf8_to_chartype_array(const gchar *utf8text, /*out*/ int *array_length);
 
